Change use of collections for Java 8.
Prefer Arrays.asList to reduce the Java 8 patch.