@@ -3,7 +3,6 @@ package org.ldaptive;
 
 import java.util.Arrays;
 import java.util.Iterator;
-import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 import org.ldaptive.transport.mock.MockConnection;
@@ -130,7 +129,7 @@ public class ActivePassiveConnectionStrategyTest
     Assert.assertEquals(strategy.ldapURLSet.getActiveUrls().size(), 3);
     Assert.assertEquals(
       strategy.ldapURLSet.getActiveUrls(),
-      List.of(
+      Arrays.asList(
         new LdapURL("ldap://directory-1.ldaptive.org"),
         new LdapURL("ldap://directory-2.ldaptive.org"),
         new LdapURL("ldap://directory-3.ldaptive.org")));
@@ -141,7 +140,7 @@ public class ActivePassiveConnectionStrategyTest
     Assert.assertEquals(strategy.ldapURLSet.getActiveUrls().size(), 2);
     Assert.assertEquals(
       strategy.ldapURLSet.getActiveUrls(),
-      List.of(
+      Arrays.asList(
         new LdapURL("ldap://directory-2.ldaptive.org"),
         new LdapURL("ldap://directory-3.ldaptive.org")));
     Assert.assertEquals(strategy.ldapURLSet.getInactiveUrls().size(), 1);
@@ -152,14 +151,14 @@ public class ActivePassiveConnectionStrategyTest
     // confirm the inactive entry stays at the end
     Assert.assertEquals(
       StreamSupport.stream(strategy.spliterator(), false).collect(Collectors.toList()),
-      List.of(
+      Arrays.asList(
         new LdapURL("ldap://directory-2.ldaptive.org"),
         new LdapURL("ldap://directory-3.ldaptive.org"),
         new LdapURL("ldap://directory-1.ldaptive.org")));
     Assert.assertEquals(strategy.ldapURLSet.getActiveUrls().size(), 2);
     Assert.assertEquals(
       strategy.ldapURLSet.getActiveUrls(),
-      List.of(
+      Arrays.asList(
         new LdapURL("ldap://directory-2.ldaptive.org"),
         new LdapURL("ldap://directory-3.ldaptive.org")));
     Assert.assertEquals(strategy.ldapURLSet.getInactiveUrls().size(), 1);
@@ -171,14 +170,14 @@ public class ActivePassiveConnectionStrategyTest
     strategy.success(strategy.ldapURLSet.getInactiveUrls().iterator().next());
     Assert.assertEquals(
       StreamSupport.stream(strategy.spliterator(), false).collect(Collectors.toList()),
-      List.of(
+      Arrays.asList(
         new LdapURL("ldap://directory-1.ldaptive.org"),
         new LdapURL("ldap://directory-2.ldaptive.org"),
         new LdapURL("ldap://directory-3.ldaptive.org")));
     Assert.assertEquals(strategy.ldapURLSet.getActiveUrls().size(), 3);
     Assert.assertEquals(
       strategy.ldapURLSet.getActiveUrls(),
-      List.of(
+      Arrays.asList(
         new LdapURL("ldap://directory-1.ldaptive.org"),
         new LdapURL("ldap://directory-2.ldaptive.org"),
         new LdapURL("ldap://directory-3.ldaptive.org")));
@@ -200,7 +199,7 @@ public class ActivePassiveConnectionStrategyTest
     Assert.assertEquals(strategy.ldapURLSet.getActiveUrls().size(), 3);
     Assert.assertEquals(
       strategy.ldapURLSet.getActiveUrls(),
-      List.of(
+      Arrays.asList(
         new LdapURL("ldap://directory-1.ldaptive.org"),
         new LdapURL("ldap://directory-2.ldaptive.org"),
         new LdapURL("ldap://directory-3.ldaptive.org")));
@@ -215,14 +214,14 @@ public class ActivePassiveConnectionStrategyTest
     Assert.assertEquals(strategy.ldapURLSet.getInactiveUrls().size(), 2);
     Assert.assertEquals(
       strategy.ldapURLSet.getInactiveUrls(),
-      List.of(
+      Arrays.asList(
         new LdapURL("ldap://directory-1.ldaptive.org"),
         new LdapURL("ldap://directory-2.ldaptive.org")));
 
     // confirm the inactive entries stay at the end
     Assert.assertEquals(
       StreamSupport.stream(strategy.spliterator(), false).collect(Collectors.toList()),
-      List.of(
+      Arrays.asList(
         new LdapURL("ldap://directory-3.ldaptive.org"),
         new LdapURL("ldap://directory-1.ldaptive.org"),
         new LdapURL("ldap://directory-2.ldaptive.org")));
@@ -233,7 +232,7 @@ public class ActivePassiveConnectionStrategyTest
     Assert.assertEquals(strategy.ldapURLSet.getInactiveUrls().size(), 2);
     Assert.assertEquals(
       strategy.ldapURLSet.getInactiveUrls(),
-      List.of(
+      Arrays.asList(
         new LdapURL("ldap://directory-1.ldaptive.org"),
         new LdapURL("ldap://directory-2.ldaptive.org")));
 
@@ -241,14 +240,14 @@ public class ActivePassiveConnectionStrategyTest
     strategy.success(strategy.ldapURLSet.getInactiveUrls().iterator().next());
     Assert.assertEquals(
       StreamSupport.stream(strategy.spliterator(), false).collect(Collectors.toList()),
-      List.of(
+      Arrays.asList(
         new LdapURL("ldap://directory-1.ldaptive.org"),
         new LdapURL("ldap://directory-3.ldaptive.org"),
         new LdapURL("ldap://directory-2.ldaptive.org")));
     Assert.assertEquals(strategy.ldapURLSet.getActiveUrls().size(), 2);
     Assert.assertEquals(
       strategy.ldapURLSet.getActiveUrls(),
-      List.of(
+      Arrays.asList(
         new LdapURL("ldap://directory-1.ldaptive.org"),
         new LdapURL("ldap://directory-3.ldaptive.org")));
     Assert.assertEquals(strategy.ldapURLSet.getInactiveUrls().size(), 1);
@@ -260,14 +259,14 @@ public class ActivePassiveConnectionStrategyTest
     strategy.success(strategy.ldapURLSet.getInactiveUrls().iterator().next());
     Assert.assertEquals(
       StreamSupport.stream(strategy.spliterator(), false).collect(Collectors.toList()),
-      List.of(
+      Arrays.asList(
         new LdapURL("ldap://directory-1.ldaptive.org"),
         new LdapURL("ldap://directory-2.ldaptive.org"),
         new LdapURL("ldap://directory-3.ldaptive.org")));
     Assert.assertEquals(strategy.ldapURLSet.getActiveUrls().size(), 3);
     Assert.assertEquals(
       strategy.ldapURLSet.getActiveUrls(),
-      List.of(
+      Arrays.asList(
         new LdapURL("ldap://directory-1.ldaptive.org"),
         new LdapURL("ldap://directory-2.ldaptive.org"),
         new LdapURL("ldap://directory-3.ldaptive.org")));
